# relay-struct

./: .editorconfig  Cargo.toml  README.md
docs/: API.md  ARCH.md
docs/api/: CORE.md  POST.md  USERID.md
src/: core.rs  error.rs  lib.rs  main.rs  uid.rs
src/core/: v0.rs
src/server/: main.rs
src/server/core/: v0.rs
src/uid/: error.rs
