[package]
name = "relay-struct"
version = "0.1.0"
edition = "2021"
license = "EUPL-1.2"

[[bin]]
name = "server"
path = "src/server/main.rs"

[dependencies]
# Ser/De
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Server
rocket = { version = "0.5.1", features = ["json"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = "1"

# Utilities
log = "0.4.22"
thiserror = "2"
